gap fix

--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ form .btn2{
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 40px;
+  gap: 10px;
   padding: 20px 0 200px 0; 
 }
 
